--- a/style.css
+++ b/style.css
@@ -5,3 +5,19 @@
 body {
     margin: 0;
 }
+
+table {
+    border-collapse: collapse;
+    width: 200px;
+    height: 200px;
+    table-layout: fixed;
+  }
+  
+  td {
+    width: 33.33%;
+    height: 33.33%;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 24px;
+    border: 1px solid black;
+  }
